--- a/src/styles/pages/_competence.scss
+++ b/src/styles/pages/_competence.scss
@@ -17,6 +17,7 @@
       width: 40%;
       display: flex;
       flex-direction: column;
+      align-content: space-around;
       padding: 0.5rem;
       h1 {
         text-align: center;
@@ -60,6 +61,9 @@
       height: 100%;
       width: 60%;
       padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-content: space-around;
       h1 {
         text-align: center;
         font-weight: 400;
@@ -135,6 +139,9 @@
       width: 25%;
       border-bottom-right-radius: 25px;
       padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      align-content: space-around;
       h1 {
         font-size: 1.5rem;
         text-align: center;
