--- a/src/styles/pages/_competence.scss
+++ b/src/styles/pages/_competence.scss
@@ -73,7 +73,7 @@
         }
       }
       .experiences-item {
-        margin-bottom: 1rem;
+        margin: auto;
         h5 {
           font-size: 1rem;
           font-style: italic;
@@ -109,11 +109,13 @@
       }
       .competences-listes {
         width: 100%;
+        height: auto;
         display: flex;
         flex-direction: row;
         font-size: 1.5rem;
         ul {
           width: 50%;
+          height: 100%;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -121,7 +123,7 @@
             padding: 0.5rem;
             display: flex;
             flex-direction: row;
-            margin-left: 5rem;
+            margin: auto 0 auto 5rem;
             font-size: 1.3rem;
             .logo {
               width: 50px;
@@ -152,6 +154,7 @@
       }
       ul {
         li {
+          margin: auto;
           font-size: 1.3rem;
           padding: 0.5rem;
         }
