--- a/src/styles/pages/_competence.scss
+++ b/src/styles/pages/_competence.scss
@@ -1,5 +1,5 @@
 .content-competences {
-  height: 80vh;
+  height: 120vh;
   width: 100%;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -100,6 +100,7 @@
       width: 75%;
       border-bottom-left-radius: 25px;
       h1 {
+        height: 15%;
         text-align: center;
         font-weight: 400;
         font-size: 1.5rem;
@@ -109,6 +110,7 @@
       }
       .competences-listes {
         width: 100%;
+        height: 85%;
         display: flex;
         flex-direction: row;
         font-size: 1.5rem;
@@ -139,11 +141,11 @@
       height: 100%;
       width: 25%;
       border-bottom-right-radius: 25px;
-      padding: 0.5rem;
       display: flex;
       flex-direction: column;
       align-content: space-around;
       h1 {
+        height: 15%;
         font-size: 1.5rem;
         text-align: center;
         font-weight: 400;
@@ -152,10 +154,12 @@
         }
       }
       ul {
+        height: 85% !important;
+        display: flex;
+        flex-direction: column;
         li {
-          margin: auto;
+          margin: auto 0 auto 2rem;
           font-size: 1.3rem;
-          padding: 0.5rem;
         }
       }
     }
