--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,6 +1,8 @@
 .content-contact {
   height: 80vh;
   width: 100%;
+  background-color: #b2bec3;
+  box-shadow: $boxShadowIn;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 2px;
   padding: 2rem;
