--- a/src/styles/pages/_competence.scss
+++ b/src/styles/pages/_competence.scss
@@ -1,6 +1,8 @@
 .content-competences {
   height: 80vh;
   width: 100%;
+  background-color: #b2bec3;
+  box-shadow: $boxShadowIn;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
   display: flex;
