--- a/src/styles/pages/_portfolio.scss
+++ b/src/styles/pages/_portfolio.scss
@@ -2,6 +2,8 @@
   width: 100%;
   height: 80vh;
   color: $black;
+  background-color: #b2bec3;
+  box-shadow: $boxShadowIn;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
   display: flex;
