correction background mobile home

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -50,7 +50,7 @@
 @include xs {
   .home-content {
     .home-title {
-      background-image: none;
+      background-color: #b2bec3;
       color: $black;
       .home-title-content {
         h1 {
