correction police mobile homer

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -51,7 +51,7 @@
   .home-content {
     .home-title {
       background-color: #b2bec3;
-      color: $black;
+      color: $white;
       .home-title-content {
         h1 {
           margin-top: 2rem;
